--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,58 @@
     Verde: #49a09d
     Liás: #5f2c82
 */
+
+:root{
+    --cor-verde: #49a09d;
+    --cor-lilas: #5f2c82;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body, html{
+    background-color: var(--cor-lilas);
+
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+}
+
+section#login > div#imagem{
+    display: block;
+    background: url(../imagens/metal.png) center center no-repeat fixed;
+    background-size: cover;
+
+    height: 200px;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
+}
