--- a/estilos/style.css
+++ b/estilos/style.css
@@ -53,7 +53,7 @@ section#login{
 
 section#login > div#imagem{
     display: block;
-    background: url(../imagens/metal.png) center center no-repeat fixed;
+    background: url(../imagens/metal.jpg) center center no-repeat fixed;
     background-size: cover;
 
     height: 200px;
@@ -61,5 +61,18 @@ section#login > div#imagem{
 
 section#login > div#formulario{
     display: block;
-    padding: 10px;
+    
 }
+
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p{
+    font-size: 0.8em;
+}
+
+
+
+
