--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,7 +42,7 @@ section#login{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 520px;
 
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
@@ -61,7 +61,7 @@ section#login > div#imagem{
 
 section#login > div#formulario{
     display: block;
-    
+    padding: 10px;
 }
 
 div#formulario > h1{
@@ -73,6 +73,57 @@ div#formulario > p{
     font-size: 0.8em;
 }
 
+form > div.campo{
+    background-color: var(--cor-lilas);
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0;
+}
 
+div.campo label {
+    display: none;
+}
 
+form > input[type=submit]{
+    display: block;
+    
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
+form > input[type=submit]:hover{
+    background-color: #2d6462;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    border: 1px solid #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+
+    color: #2d6462;
+
+    padding-top: 5px;
+    margin-top: 5px;
+}
+
+form > a.botao:hover{
+    background-color: #6cd3cf;
+}
+
+form > a.botao > i{
+    font-size: 0.8em;
+}
