--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,7 +37,7 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    
     overflow: hidden;
 
     background-color: white;
@@ -47,6 +47,7 @@ section#login{
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -78,12 +79,40 @@ form > div.campo{
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0;
+
+    border: 2px solid var(--cor-lilas);
 }
 
 div.campo label {
     display: none;
+}
+
+div.campo > i{
+    color: white;
+    /* background-color: black; */
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: #49cfcd;
+    /* font-size: 1em; */
+    width: calc(100% - 44px);
+    
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+
+    transform: translateY(-14px);
+}
+
+div.campo > input:focus-within{
+    background-color: white;
+    outline: none;
 }
 
 form > input[type=submit]{
@@ -116,7 +145,7 @@ form > a.botao{
 
     color: #2d6462;
 
-    padding-top: 5px;
+    padding-top: 10px;
     margin-top: 5px;
 }
 
